--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "array-shuffle": "^1.0.0",
-    "canvas": "^1.3.15",
+    "canvas": "^2.5.0",
     "clamp": "^1.0.1",
     "color-convert": "^1.3.1",
     "color-luminance": "^2.1.0",
@@ -47,7 +47,8 @@
     "ffmpeg": "ffmpeg -framerate 30 -i frames/test_%04d.png -y -s:v 1280x720 -c:v libx264 -profile:v high -crf 20 -pix_fmt yuv420p output.mp4",
     "deploy": "surge -p .",
     "start": "budo browser.js:bundle.js --live -- -t babelify",
-    "build": "browserify browser.js -t babelify | uglifyjs -m -c warnings=false > bundle.js"
+    "build": "browserify browser.js -t babelify | uglifyjs -m -c warnings=false > bundle.js",
+    "now-build": "browserify browser.js -t babelify | uglifyjs -m -c warnings=false > bundle.js"
   },
   "keywords": [],
   "repository": {
